<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="welcome_title">Welcome to Coffee Shop</string>
    <string name="welcome_subtitle">Your Perfect Coffee Experience</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_title">Welcome Back</string>
    <string name="create_account_title">Join Our Coffee Family</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="or">Hoặc</string>
    <string name="sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="login_with">Login with</string>
    <string name="remember_password">Ghi nhớ mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
</resources>